rust/windows_module/errors_7.txt
    Checking windows_module v0.1.0 (/root/aios/rust/windows_module)
error[E0425]: cannot find type `Error` in crate `dynasmrt`
   --> windows_module/src/jit/windows_compiler.rs:135:62
    |
135 | ...mrt::Error| JitE...
    |         ^^^^^ not found in `dynasmrt`
    |
help: consider importing one of these items
    |
  3 + use std::error::Error;
    |
  3 + use std::fmt::Error;
    |
  3 + use std::io::Error;
    |
  3 + use core::error::Error;
    |
    = and 13 other candidates
help: if you import `Error`, refer to it directly
    |
135 -         let mut ops = Assembler::new().map_err(|e: dynasmrt::Error| JitError::CompilationError(e.to_string()))?;
135 +         let mut ops = Assembler::new().map_err(|e: Error| JitError::CompilationError(e.to_string()))?;
    |

warning: unused import: `DynasmLabelApi`
  --> windows_module/src/jit/windows_compiler.rs:12:27
   |
12 | ...i, DynasmLabelApi, x...
   |       ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `windows_module` (lib) generated 1 warning
error: could not compile `windows_module` (lib) due to 1 previous error; 1 warning emitted
